parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> empty
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     empty -> <empty>
Rule 7     instruction -> instruction_block
Rule 8     instruction -> assignment ;
Rule 9     instruction -> relation ;
Rule 10    instruction -> expression ;
Rule 11    instruction -> break ;
Rule 12    instruction -> continue ;
Rule 13    instruction -> return ;
Rule 14    instruction -> print ;
Rule 15    instruction -> if
Rule 16    instruction -> while
Rule 17    instruction -> for
Rule 18    instruction -> ;
Rule 19    instruction_block -> { instructions }
Rule 20    break -> BREAK
Rule 21    continue -> CONTINUE
Rule 22    return -> RETURN
Rule 23    return -> RETURN expression
Rule 24    print -> PRINT value_list
Rule 25    assignment -> var assign_op expression
Rule 26    assignment -> ref assign_op expression
Rule 27    assign_op -> =
Rule 28    assign_op -> ADDASSIGN
Rule 29    assign_op -> SUBASSIGN
Rule 30    assign_op -> MULASSIGN
Rule 31    assign_op -> DIVASSIGN
Rule 32    var -> ID
Rule 33    ref -> ID [ value_list ]
Rule 34    expression -> expression + expression
Rule 35    expression -> expression - expression
Rule 36    expression -> expression * expression
Rule 37    expression -> expression / expression
Rule 38    expression -> expression DOTADD expression
Rule 39    expression -> expression DOTSUB expression
Rule 40    expression -> expression DOTMUL expression
Rule 41    expression -> expression DOTDIV expression
Rule 42    expression -> ( expression )
Rule 43    expression -> var
Rule 44    expression -> ref
Rule 45    expression -> number
Rule 46    expression -> list
Rule 47    expression -> function
Rule 48    expression -> string
Rule 49    string -> STRING
Rule 50    function -> ZEROS ( value_list )
Rule 51    function -> EYE ( value_list )
Rule 52    function -> ONES ( value_list )
Rule 53    list -> [ value_list ]
Rule 54    list -> [ ]
Rule 55    value_list -> value_list , expression
Rule 56    value_list -> expression
Rule 57    expression -> expression '
Rule 58    number -> FLOAT
Rule 59    number -> INT
Rule 60    expression -> - expression
Rule 61    relation -> expression LT expression
Rule 62    relation -> expression GT expression
Rule 63    relation -> expression LE expression
Rule 64    relation -> expression GE expression
Rule 65    relation -> expression NE expression
Rule 66    relation -> expression EQ expression
Rule 67    if -> IF ( relation ) instruction
Rule 68    if -> IF ( relation ) instruction ELSE instruction
Rule 69    while -> WHILE ( relation ) instruction
Rule 70    range -> expression : expression
Rule 71    for -> FOR ID = range instruction

Terminals, with rules where they appear

'                    : 57
(                    : 42 50 51 52 67 68 69
)                    : 42 50 51 52 67 68 69
*                    : 36
+                    : 34
,                    : 55
-                    : 35 60
/                    : 37
:                    : 70
;                    : 8 9 10 11 12 13 14 18
=                    : 27 71
ADDASSIGN            : 28
BREAK                : 20
CONTINUE             : 21
DIVASSIGN            : 31
DOTADD               : 38
DOTDIV               : 41
DOTMUL               : 40
DOTSUB               : 39
ELSE                 : 68
EQ                   : 66
EYE                  : 51
FLOAT                : 58
FOR                  : 71
GE                   : 64
GT                   : 62
ID                   : 32 33 71
IF                   : 67 68
INT                  : 59
LE                   : 63
LT                   : 61
MULASSIGN            : 30
NE                   : 65
ONES                 : 52
PRINT                : 24
RETURN               : 22 23
STRING               : 49
SUBASSIGN            : 29
WHILE                : 69
ZEROS                : 50
[                    : 33 53 54
]                    : 33 53 54
error                : 
{                    : 19
}                    : 19

Nonterminals, with rules where they appear

assign_op            : 25 26
assignment           : 8
break                : 11
continue             : 12
empty                : 3
expression           : 10 23 25 26 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 55 56 57 60 61 61 62 62 63 63 64 64 65 65 66 66 70 70
for                  : 17
function             : 47
if                   : 15
instruction          : 4 5 67 68 68 69 71
instruction_block    : 7
instructions         : 2 4 19
instructions_opt     : 1
list                 : 46
number               : 45
print                : 14
program              : 0
range                : 71
ref                  : 26 44
relation             : 9 67 68 69
return               : 13
string               : 48
value_list           : 24 33 50 51 52 53 55
var                  : 25 43
while                : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> . empty
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) empty -> .
    (7) instruction -> . instruction_block
    (8) instruction -> . assignment ;
    (9) instruction -> . relation ;
    (10) instruction -> . expression ;
    (11) instruction -> . break ;
    (12) instruction -> . continue ;
    (13) instruction -> . return ;
    (14) instruction -> . print ;
    (15) instruction -> . if
    (16) instruction -> . while
    (17) instruction -> . for
    (18) instruction -> . ;
    (19) instruction_block -> . { instructions }
    (25) assignment -> . var assign_op expression
    (26) assignment -> . ref assign_op expression
    (61) relation -> . expression LT expression
    (62) relation -> . expression GT expression
    (63) relation -> . expression LE expression
    (64) relation -> . expression GE expression
    (65) relation -> . expression NE expression
    (66) relation -> . expression EQ expression
    (34) expression -> . expression + expression
    (35) expression -> . expression - expression
    (36) expression -> . expression * expression
    (37) expression -> . expression / expression
    (38) expression -> . expression DOTADD expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTMUL expression
    (41) expression -> . expression DOTDIV expression
    (42) expression -> . ( expression )
    (43) expression -> . var
    (44) expression -> . ref
    (45) expression -> . number
    (46) expression -> . list
    (47) expression -> . function
    (48) expression -> . string
    (57) expression -> . expression '
    (60) expression -> . - expression
    (20) break -> . BREAK
    (21) continue -> . CONTINUE
    (22) return -> . RETURN
    (23) return -> . RETURN expression
    (24) print -> . PRINT value_list
    (67) if -> . IF ( relation ) instruction
    (68) if -> . IF ( relation ) instruction ELSE instruction
    (69) while -> . WHILE ( relation ) instruction
    (71) for -> . FOR ID = range instruction
    (32) var -> . ID
    (33) ref -> . ID [ value_list ]
    (58) number -> . FLOAT
    (59) number -> . INT
    (53) list -> . [ value_list ]
    (54) list -> . [ ]
    (50) function -> . ZEROS ( value_list )
    (51) function -> . EYE ( value_list )
    (52) function -> . ONES ( value_list )
    (49) string -> . STRING

    $end            reduce using rule 6 (empty -> .)
    ;               shift and go to state 8
    {               shift and go to state 18
    (               shift and go to state 22
    -               shift and go to state 21
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 29
    PRINT           shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    FOR             shift and go to state 33
    ID              shift and go to state 34
    FLOAT           shift and go to state 36
    INT             shift and go to state 37
    [               shift and go to state 35
    ZEROS           shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 40
    STRING          shift and go to state 41

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    empty                          shift and go to state 4
    instruction                    shift and go to state 5
    instruction_block              shift and go to state 6
    assignment                     shift and go to state 7
    relation                       shift and go to state 9
    expression                     shift and go to state 10
    break                          shift and go to state 11
    continue                       shift and go to state 12
    return                         shift and go to state 13
    print                          shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    for                            shift and go to state 17
    var                            shift and go to state 19
    ref                            shift and go to state 20
    number                         shift and go to state 23
    list                           shift and go to state 24
    function                       shift and go to state 25
    string                         shift and go to state 26

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (7) instruction -> . instruction_block
    (8) instruction -> . assignment ;
    (9) instruction -> . relation ;
    (10) instruction -> . expression ;
    (11) instruction -> . break ;
    (12) instruction -> . continue ;
    (13) instruction -> . return ;
    (14) instruction -> . print ;
    (15) instruction -> . if
    (16) instruction -> . while
    (17) instruction -> . for
    (18) instruction -> . ;
    (19) instruction_block -> . { instructions }
    (25) assignment -> . var assign_op expression
    (26) assignment -> . ref assign_op expression
    (61) relation -> . expression LT expression
    (62) relation -> . expression GT expression
    (63) relation -> . expression LE expression
    (64) relation -> . expression GE expression
    (65) relation -> . expression NE expression
    (66) relation -> . expression EQ expression
    (34) expression -> . expression + expression
    (35) expression -> . expression - expression
    (36) expression -> . expression * expression
    (37) expression -> . expression / expression
    (38) expression -> . expression DOTADD expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTMUL expression
    (41) expression -> . expression DOTDIV expression
    (42) expression -> . ( expression )
    (43) expression -> . var
    (44) expression -> . ref
    (45) expression -> . number
    (46) expression -> . list
    (47) expression -> . function
    (48) expression -> . string
    (57) expression -> . expression '
    (60) expression -> . - expression
    (20) break -> . BREAK
    (21) continue -> . CONTINUE
    (22) return -> . RETURN
    (23) return -> . RETURN expression
    (24) print -> . PRINT value_list
    (67) if -> . IF ( relation ) instruction
    (68) if -> . IF ( relation ) instruction ELSE instruction
    (69) while -> . WHILE ( relation ) instruction
    (71) for -> . FOR ID = range instruction
    (32) var -> . ID
    (33) ref -> . ID [ value_list ]
    (58) number -> . FLOAT
    (59) number -> . INT
    (53) list -> . [ value_list ]
    (54) list -> . [ ]
    (50) function -> . ZEROS ( value_list )
    (51) function -> . EYE ( value_list )
    (52) function -> . ONES ( value_list )
    (49) string -> . STRING

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    ;               shift and go to state 8
    {               shift and go to state 18
    (               shift and go to state 22
    -               shift and go to state 21
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 29
    PRINT           shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    FOR             shift and go to state 33
    ID              shift and go to state 34
    FLOAT           shift and go to state 36
    INT             shift and go to state 37
    [               shift and go to state 35
    ZEROS           shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 40
    STRING          shift and go to state 41

    instruction                    shift and go to state 42
    instruction_block              shift and go to state 6
    assignment                     shift and go to state 7
    relation                       shift and go to state 9
    expression                     shift and go to state 10
    break                          shift and go to state 11
    continue                       shift and go to state 12
    return                         shift and go to state 13
    print                          shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    for                            shift and go to state 17
    var                            shift and go to state 19
    ref                            shift and go to state 20
    number                         shift and go to state 23
    list                           shift and go to state 24
    function                       shift and go to state 25
    string                         shift and go to state 26

state 4

    (3) instructions_opt -> empty .

    $end            reduce using rule 3 (instructions_opt -> empty .)


state 5

    (5) instructions -> instruction .

    ;               reduce using rule 5 (instructions -> instruction .)
    {               reduce using rule 5 (instructions -> instruction .)
    (               reduce using rule 5 (instructions -> instruction .)
    -               reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    FLOAT           reduce using rule 5 (instructions -> instruction .)
    INT             reduce using rule 5 (instructions -> instruction .)
    [               reduce using rule 5 (instructions -> instruction .)
    ZEROS           reduce using rule 5 (instructions -> instruction .)
    EYE             reduce using rule 5 (instructions -> instruction .)
    ONES            reduce using rule 5 (instructions -> instruction .)
    STRING          reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 6

    (7) instruction -> instruction_block .

    ;               reduce using rule 7 (instruction -> instruction_block .)
    {               reduce using rule 7 (instruction -> instruction_block .)
    (               reduce using rule 7 (instruction -> instruction_block .)
    -               reduce using rule 7 (instruction -> instruction_block .)
    BREAK           reduce using rule 7 (instruction -> instruction_block .)
    CONTINUE        reduce using rule 7 (instruction -> instruction_block .)
    RETURN          reduce using rule 7 (instruction -> instruction_block .)
    PRINT           reduce using rule 7 (instruction -> instruction_block .)
    IF              reduce using rule 7 (instruction -> instruction_block .)
    WHILE           reduce using rule 7 (instruction -> instruction_block .)
    FOR             reduce using rule 7 (instruction -> instruction_block .)
    ID              reduce using rule 7 (instruction -> instruction_block .)
    FLOAT           reduce using rule 7 (instruction -> instruction_block .)
    INT             reduce using rule 7 (instruction -> instruction_block .)
    [               reduce using rule 7 (instruction -> instruction_block .)
    ZEROS           reduce using rule 7 (instruction -> instruction_block .)
    EYE             reduce using rule 7 (instruction -> instruction_block .)
    ONES            reduce using rule 7 (instruction -> instruction_block .)
    STRING          reduce using rule 7 (instruction -> instruction_block .)
    $end            reduce using rule 7 (instruction -> instruction_block .)
    }               reduce using rule 7 (instruction -> instruction_block .)
    ELSE            reduce using rule 7 (instruction -> instruction_block .)


state 7

    (8) instruction -> assignment . ;

    ;               shift and go to state 43


state 8

    (18) instruction -> ; .

    ;               reduce using rule 18 (instruction -> ; .)
    {               reduce using rule 18 (instruction -> ; .)
    (               reduce using rule 18 (instruction -> ; .)
    -               reduce using rule 18 (instruction -> ; .)
    BREAK           reduce using rule 18 (instruction -> ; .)
    CONTINUE        reduce using rule 18 (instruction -> ; .)
    RETURN          reduce using rule 18 (instruction -> ; .)
    PRINT           reduce using rule 18 (instruction -> ; .)
    IF              reduce using rule 18 (instruction -> ; .)
    WHILE           reduce using rule 18 (instruction -> ; .)
    FOR             reduce using rule 18 (instruction -> ; .)
    ID              reduce using rule 18 (instruction -> ; .)
    FLOAT           reduce using rule 18 (instruction -> ; .)
    INT             reduce using rule 18 (instruction -> ; .)
    [               reduce using rule 18 (instruction -> ; .)
    ZEROS           reduce using rule 18 (instruction -> ; .)
    EYE             reduce using rule 18 (instruction -> ; .)
    ONES            reduce using rule 18 (instruction -> ; .)
    STRING          reduce using rule 18 (instruction -> ; .)
    $end            reduce using rule 18 (instruction -> ; .)
    }               reduce using rule 18 (instruction -> ; .)
    ELSE            reduce using rule 18 (instruction -> ; .)


state 9

    (9) instruction -> relation . ;

    ;               shift and go to state 44


state 10

    (10) instruction -> expression . ;
    (61) relation -> expression . LT expression
    (62) relation -> expression . GT expression
    (63) relation -> expression . LE expression
    (64) relation -> expression . GE expression
    (65) relation -> expression . NE expression
    (66) relation -> expression . EQ expression
    (34) expression -> expression . + expression
    (35) expression -> expression . - expression
    (36) expression -> expression . * expression
    (37) expression -> expression . / expression
    (38) expression -> expression . DOTADD expression
    (39) expression -> expression . DOTSUB expression
    (40) expression -> expression . DOTMUL expression
    (41) expression -> expression . DOTDIV expression
    (57) expression -> expression . '

    ;               shift and go to state 45
    LT              shift and go to state 46
    GT              shift and go to state 47
    LE              shift and go to state 48
    GE              shift and go to state 49
    NE              shift and go to state 50
    EQ              shift and go to state 51
    +               shift and go to state 52
    -               shift and go to state 53
    *               shift and go to state 54
    /               shift and go to state 55
    DOTADD          shift and go to state 56
    DOTSUB          shift and go to state 57
    DOTMUL          shift and go to state 58
    DOTDIV          shift and go to state 59
    '               shift and go to state 60


state 11

    (11) instruction -> break . ;

    ;               shift and go to state 61


state 12

    (12) instruction -> continue . ;

    ;               shift and go to state 62


state 13

    (13) instruction -> return . ;

    ;               shift and go to state 63


state 14

    (14) instruction -> print . ;

    ;               shift and go to state 64


state 15

    (15) instruction -> if .

    ;               reduce using rule 15 (instruction -> if .)
    {               reduce using rule 15 (instruction -> if .)
    (               reduce using rule 15 (instruction -> if .)
    -               reduce using rule 15 (instruction -> if .)
    BREAK           reduce using rule 15 (instruction -> if .)
    CONTINUE        reduce using rule 15 (instruction -> if .)
    RETURN          reduce using rule 15 (instruction -> if .)
    PRINT           reduce using rule 15 (instruction -> if .)
    IF              reduce using rule 15 (instruction -> if .)
    WHILE           reduce using rule 15 (instruction -> if .)
    FOR             reduce using rule 15 (instruction -> if .)
    ID              reduce using rule 15 (instruction -> if .)
    FLOAT           reduce using rule 15 (instruction -> if .)
    INT             reduce using rule 15 (instruction -> if .)
    [               reduce using rule 15 (instruction -> if .)
    ZEROS           reduce using rule 15 (instruction -> if .)
    EYE             reduce using rule 15 (instruction -> if .)
    ONES            reduce using rule 15 (instruction -> if .)
    STRING          reduce using rule 15 (instruction -> if .)
    $end            reduce using rule 15 (instruction -> if .)
    }               reduce using rule 15 (instruction -> if .)
    ELSE            reduce using rule 15 (instruction -> if .)


state 16

    (16) instruction -> while .

    ;               reduce using rule 16 (instruction -> while .)
    {               reduce using rule 16 (instruction -> while .)
    (               reduce using rule 16 (instruction -> while .)
    -               reduce using rule 16 (instruction -> while .)
    BREAK           reduce using rule 16 (instruction -> while .)
    CONTINUE        reduce using rule 16 (instruction -> while .)
    RETURN          reduce using rule 16 (instruction -> while .)
    PRINT           reduce using rule 16 (instruction -> while .)
    IF              reduce using rule 16 (instruction -> while .)
    WHILE           reduce using rule 16 (instruction -> while .)
    FOR             reduce using rule 16 (instruction -> while .)
    ID              reduce using rule 16 (instruction -> while .)
    FLOAT           reduce using rule 16 (instruction -> while .)
    INT             reduce using rule 16 (instruction -> while .)
    [               reduce using rule 16 (instruction -> while .)
    ZEROS           reduce using rule 16 (instruction -> while .)
    EYE             reduce using rule 16 (instruction -> while .)
    ONES            reduce using rule 16 (instruction -> while .)
    STRING          reduce using rule 16 (instruction -> while .)
    $end            reduce using rule 16 (instruction -> while .)
    }               reduce using rule 16 (instruction -> while .)
    ELSE            reduce using rule 16 (instruction -> while .)


state 17

    (17) instruction -> for .

    ;               reduce using rule 17 (instruction -> for .)
    {               reduce using rule 17 (instruction -> for .)
    (               reduce using rule 17 (instruction -> for .)
    -               reduce using rule 17 (instruction -> for .)
    BREAK           reduce using rule 17 (instruction -> for .)
    CONTINUE        reduce using rule 17 (instruction -> for .)
    RETURN          reduce using rule 17 (instruction -> for .)
    PRINT           reduce using rule 17 (instruction -> for .)
    IF              reduce using rule 17 (instruction -> for .)
    WHILE           reduce using rule 17 (instruction -> for .)
    FOR             reduce using rule 17 (instruction -> for .)
    ID              reduce using rule 17 (instruction -> for .)
    FLOAT           reduce using rule 17 (instruction -> for .)
    INT             reduce using rule 17 (instruction -> for .)
    [               reduce using rule 17 (instruction -> for .)
    ZEROS           reduce using rule 17 (instruction -> for .)
    EYE             reduce using rule 17 (instruction -> for .)
    ONES            reduce using rule 17 (instruction -> for .)
    STRING          reduce using rule 17 (instruction -> for .)
    $end            reduce using rule 17 (instruction -> for .)
    }               reduce using rule 17 (instruction -> for .)
    ELSE            reduce using rule 17 (instruction -> for .)


state 18

    (19) instruction_block -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (7) instruction -> . instruction_block
    (8) instruction -> . assignment ;
    (9) instruction -> . relation ;
    (10) instruction -> . expression ;
    (11) instruction -> . break ;
    (12) instruction -> . continue ;
    (13) instruction -> . return ;
    (14) instruction -> . print ;
    (15) instruction -> . if
    (16) instruction -> . while
    (17) instruction -> . for
    (18) instruction -> . ;
    (19) instruction_block -> . { instructions }
    (25) assignment -> . var assign_op expression
    (26) assignment -> . ref assign_op expression
    (61) relation -> . expression LT expression
    (62) relation -> . expression GT expression
    (63) relation -> . expression LE expression
    (64) relation -> . expression GE expression
    (65) relation -> . expression NE expression
    (66) relation -> . expression EQ expression
    (34) expression -> . expression + expression
    (35) expression -> . expression - expression
    (36) expression -> . expression * expression
    (37) expression -> . expression / expression
    (38) expression -> . expression DOTADD expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTMUL expression
    (41) expression -> . expression DOTDIV expression
    (42) expression -> . ( expression )
    (43) expression -> . var
    (44) expression -> . ref
    (45) expression -> . number
    (46) expression -> . list
    (47) expression -> . function
    (48) expression -> . string
    (57) expression -> . expression '
    (60) expression -> . - expression
    (20) break -> . BREAK
    (21) continue -> . CONTINUE
    (22) return -> . RETURN
    (23) return -> . RETURN expression
    (24) print -> . PRINT value_list
    (67) if -> . IF ( relation ) instruction
    (68) if -> . IF ( relation ) instruction ELSE instruction
    (69) while -> . WHILE ( relation ) instruction
    (71) for -> . FOR ID = range instruction
    (32) var -> . ID
    (33) ref -> . ID [ value_list ]
    (58) number -> . FLOAT
    (59) number -> . INT
    (53) list -> . [ value_list ]
    (54) list -> . [ ]
    (50) function -> . ZEROS ( value_list )
    (51) function -> . EYE ( value_list )
    (52) function -> . ONES ( value_list )
    (49) string -> . STRING

    ;               shift and go to state 8
    {               shift and go to state 18
    (               shift and go to state 22
    -               shift and go to state 21
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 29
    PRINT           shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    FOR             shift and go to state 33
    ID              shift and go to state 34
    FLOAT           shift and go to state 36
    INT             shift and go to state 37
    [               shift and go to state 35
    ZEROS           shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 40
    STRING          shift and go to state 41

    instructions                   shift and go to state 65
    instruction                    shift and go to state 5
    instruction_block              shift and go to state 6
    assignment                     shift and go to state 7
    relation                       shift and go to state 9
    expression                     shift and go to state 10
    break                          shift and go to state 11
    continue                       shift and go to state 12
    return                         shift and go to state 13
    print                          shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    for                            shift and go to state 17
    var                            shift and go to state 19
    ref                            shift and go to state 20
    number                         shift and go to state 23
    list                           shift and go to state 24
    function                       shift and go to state 25
    string                         shift and go to state 26

state 19

    (25) assignment -> var . assign_op expression
    (43) expression -> var .
    (27) assign_op -> . =
    (28) assign_op -> . ADDASSIGN
    (29) assign_op -> . SUBASSIGN
    (30) assign_op -> . MULASSIGN
    (31) assign_op -> . DIVASSIGN

    ;               reduce using rule 43 (expression -> var .)
    LT              reduce using rule 43 (expression -> var .)
    GT              reduce using rule 43 (expression -> var .)
    LE              reduce using rule 43 (expression -> var .)
    GE              reduce using rule 43 (expression -> var .)
    NE              reduce using rule 43 (expression -> var .)
    EQ              reduce using rule 43 (expression -> var .)
    +               reduce using rule 43 (expression -> var .)
    -               reduce using rule 43 (expression -> var .)
    *               reduce using rule 43 (expression -> var .)
    /               reduce using rule 43 (expression -> var .)
    DOTADD          reduce using rule 43 (expression -> var .)
    DOTSUB          reduce using rule 43 (expression -> var .)
    DOTMUL          reduce using rule 43 (expression -> var .)
    DOTDIV          reduce using rule 43 (expression -> var .)
    '               reduce using rule 43 (expression -> var .)
    =               shift and go to state 67
    ADDASSIGN       shift and go to state 68
    SUBASSIGN       shift and go to state 69
    MULASSIGN       shift and go to state 70
    DIVASSIGN       shift and go to state 71

    assign_op                      shift and go to state 66

state 20

    (26) assignment -> ref . assign_op expression
    (44) expression -> ref .
    (27) assign_op -> . =
    (28) assign_op -> . ADDASSIGN
    (29) assign_op -> . SUBASSIGN
    (30) assign_op -> . MULASSIGN
    (31) assign_op -> . DIVASSIGN

    ;               reduce using rule 44 (expression -> ref .)
    LT              reduce using rule 44 (expression -> ref .)
    GT              reduce using rule 44 (expression -> ref .)
    LE              reduce using rule 44 (expression -> ref .)
    GE              reduce using rule 44 (expression -> ref .)
    NE              reduce using rule 44 (expression -> ref .)
    EQ              reduce using rule 44 (expression -> ref .)
    +               reduce using rule 44 (expression -> ref .)
    -               reduce using rule 44 (expression -> ref .)
    *               reduce using rule 44 (expression -> ref .)
    /               reduce using rule 44 (expression -> ref .)
    DOTADD          reduce using rule 44 (expression -> ref .)
    DOTSUB          reduce using rule 44 (expression -> ref .)
    DOTMUL          reduce using rule 44 (expression -> ref .)
    DOTDIV          reduce using rule 44 (expression -> ref .)
    '               reduce using rule 44 (expression -> ref .)
    =               shift and go to state 67
    ADDASSIGN       shift and go to state 68
    SUBASSIGN       shift and go to state 69
    MULASSIGN       shift and go to state 70
    DIVASSIGN       shift and go to state 71

    assign_op                      shift and go to state 72

state 21

    (60) expression -> - . expression
    (34) expression -> . expression + expression
    (35) expression -> . expression - expression
    (36) expression -> . expression * expression
    (37) expression -> . expression / expression
    (38) expression -> . expression DOTADD expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTMUL expression
    (41) expression -> . expression DOTDIV expression
    (42) expression -> . ( expression )
    (43) expression -> . var
    (44) expression -> . ref
    (45) expression -> . number
    (46) expression -> . list
    (47) expression -> . function
    (48) expression -> . string
    (57) expression -> . expression '
    (60) expression -> . - expression
    (32) var -> . ID
    (33) ref -> . ID [ value_list ]
    (58) number -> . FLOAT
    (59) number -> . INT
    (53) list -> . [ value_list ]
    (54) list -> . [ ]
    (50) function -> . ZEROS ( value_list )
    (51) function -> . EYE ( value_list )
    (52) function -> . ONES ( value_list )
    (49) string -> . STRING
